# src/interfaces/requests.ts
@@ -1,23 +1,18 @@
-import { Provider } from './Provider';
-
-export interface LoginRequestBase {
-  provider: Provider;
-  email: string;
-}
-
-export interface GoogleLoginRequest extends LoginRequestBase {
+export type GoogleLoginRequest = {
   provider: 'GOOGLE';
+  email: string;
   name?: string;
   id: string;
   idToken: string;
   authToken: string;
   photoUrl?: string;
-}
+};
 
-export interface EmailLoginRequest extends LoginRequestBase {
+export type EmailLoginRequest = {
   provider: 'EMAIL';
+  email: string;
   code?: string;
-}
+};
 
 export type LoginRequest = EmailLoginRequest | GoogleLoginRequest;
 
